@@ -38,7 +38,7 @@ com.google.inject.guice.version = 3.0
 /com.googlecode.mp4parser/isoparser = 1.0.2
 /com.ibm.icu/icu4j = 54.1
 /com.pff/java-libpst = 0.8.1
-/com.spatial4j/spatial4j = 0.4.1
+/com.spatial4j/spatial4j = 0.5
 
 com.sun.jersey.version = 1.9
 /com.sun.jersey.contribs/jersey-guice = ${com.sun.jersey.version}
